🐛fix: cursorControls.js import error

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </main>
     </div>
 
-    <script src="/assets/js/cursorControls.js"></script>
+    <script src="/assets/js/cursorControls.js" type="module"></script>
     <script src="/assets/js/main.js" type="module"></script>
   </body>
 </html>
